--- a/ex002/index.html
+++ b/ex002/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+</html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paragráfos</title>
+    <title>Parágrafos</title>
 </head>
 <body>
-   <h1>Paragráfos e Quebras Linha</h1> 
-   <hr>
-   <P>Você pode escrever um paragráfo qualquer jeito, basta coloacar tudo dentro das tags &lt;P&gt; e &lt;/P&gt;</P>
-   <p>Se precisar quebrar o texto em algum lugar específico <br> como esse, você pode usar a tag &lt;br&gt;</p> 
-   <p>Vamos adicionar alguns símbolos especiais:
-    &reg;
-    &copy;
-    &trade;
-    &euro;
-    &pound;
-    &yen;
-    &cent;
-    &Delta;
-    &uparrow;
-    <p>Vamos adicionar alguns emojis:
-        &#x1F525;
-        &#x1F369;
+    <h1>Parágrafos e quebras de linha</h1>
+    <hr>
+    <p>Você pode escrever
+        um parágrafo de 
+        qualquer jeito.
+        Basta colocar tudo
+        no meio do par de tags
+        &lt;p&gt; e &lt;/p&gt; <!-- LESS THAN / GREATER THAN -->
     </p>
-   </p>
+    <p>Se precisar quebrar
+        o texto em algum lugar
+        específico <br>como esse,
+        você pode usar a tag &lt;br&gt;.
+    </p>
+    <p>Vamos adicionar alguns símbolos especiais:
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &pound;
+        &yen;
+        &cent;
+        &Delta;
+        &uarr;
+    </p>
+    <p>Vamos adicionar alguns emoji: 
+        &#x1F596;
+        &#x1F913;
+    </p>
 </body>
 </html>
