--- a/ex003/index.html
+++ b/ex003/index.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste com imagem</title>
-</head>
-<body>
-    <h1>Testando Carga de imagen</h1>
-    <p>Abaixo você vai ver uma imagem que está na mesma pasta.</p>
-    <img src="Logo html 5.jpg" alt="LOGO HTML5">
-    <p>Podemos carregar imagens que estão em sub-pastas.</p>
-    <img src="imagens/CSS-Logo.png" alt="CSS3">
-    <p>Também podemos carregar imagens externas</p>
-    <img src="https://gitconnected.com/public/images/tutorials/svg/javascript.svg" alt="LOGO Javascript">
-</body>
-</html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Teste com Imagens</title>
+    </head>
+    <body>
+        <h1>Testandop carga e Imagens</h1>
+        <p>Abaixo você vai ver uma imagem que está na mesma pasta.</p>
+        <img src="logo-html.png" alt="Logo HTML5">
+        <p>Podemos também carregar imagens que estão em sub-pastas.</p>
+        <img src="imagens/logo-css.png" alt="Logo CSS3">
+        <p>Também podemos carregar imagens externas</p>
+        <img src="https://a.thumbs.redditmedia.com/zDOFJTXd6fmlD58VDGypiV94Leflz11woxmgbGY6p_4.png" alt="Logo JavaScript"> <!-- URL -->
+    </body>
+    </html>
