--- a/ex004/index.html
+++ b/ex004/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="Social-Media-Icons-Glossy-Social-HTML5.24 (1).png" type="image/x-icon">
+    <link rel="shortcut icon" href="cursoemvideo02.ico" type="image/x-icon">
     <title>Teste de Favicon</title>
 </head>
 <body>
-    <H1>Olha o favicon aqui em cima</H1>
+    <h1>Olha o favicon aqui em cima</h1>
 </body>
 </html>
