--- a/ex006/index.html
+++ b/ex006/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt=br">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favico.ico2.ico" type="image/x-icon">
-    <title>Hierarquia de Titúlos</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Hierarquia de Títulos</title>
 </head>
 <body>
     <h1>Entendendo Portugal</h1>
     <h2>Introdução</h2>
     <h3>Justificação da Temática</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quia nisi facilis cumque aspernatur mollitia provident illo consequuntur ipsum, ipsam quae laudantium unde quidem ullam, dolore eaque debitis sit ducimus.</p>
-    <h3>Cárater Execional</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis distinctio totam similique reprehenderit voluptatum repudiandae exercitationem aliquam mollitia ducimus nostrum. Ea voluptates aliquid cum sapiente veniam assumenda error, tempore saepe.</p>
-    <h3>Perguntas de Partidas</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio molestias quas harum asperiores eaque cum enim velit voluptate dolorum nobis. Aperiam porro corporis labore eos fuga ab quisquam excepturi adipisci!</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias quasi in corporis voluptatibus quia libero nemo! Totam, quidem et! Enim error nulla sunt quibusdam officiis officia, assumenda ab exercitationem in.</p>
+    <h3>Caráter excecional</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo dolor exercitationem eaque, quos odio quidem ut labore in commodi dolorem qui vitae, voluptas nam nemo eligendi repellat quasi dolores adipisci.</p>
+    <h3>Perguntas de partida</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi sint sapiente quis vero tenetur dignissimos cum porro minus placeat error eum ipsam aspernatur ullam esse nisi dicta, perspiciatis nostrum blanditiis!</p>
     <h3>Metodologia de Investigação</h3>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus quas quo natus corrupti vero non aliquam atque quam nobis, esse reiciendis mollitia quisquam quidem beatae laudantium molestias cumque debitis. Officia!</p>
     <h4>Etapas de Investigação</h4>
-    <h4>Instrumentos de Análise</h4>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, ducimus harum quo voluptatum iste amet dolores suscipit beatae a possimus voluptate ad dolore deserunt aliquid blanditiis necessitatibus explicabo praesentium! Eius?</p>
-    <h2>Ordenamnetos do Território em Portugal</h2>
-    <h3>Os Instrumentos de Gestão</h3>
-    <h4>Os Instrumentos de Planeamento</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi impedit quae deserunt vero tempore debitis molestiae a, reiciendis suscipit rerum iusto sunt accusantium odio vel perferendis ducimus error praesentium quidem?</p>
-    <h4>Os Regimes Territóriais</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, eveniet maiores doloribus culpa numquam laudantium possimus nihil, aliquam iusto maxime vero error explicabo voluptatum dolores? Necessitatibus aperiam quae tempore ipsa!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam quos error explicabo corporis minus voluptatem exercitationem. Harum sed, porro culpa, beatae atque iure odit consectetur, quibusdam tempora quae numquam. Necessitatibus.</p>
+    <h4>Instrumentos de análise</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut asperiores dolores consectetur? Obcaecati veritatis quos rem soluta eum saepe magnam consectetur tenetur eius molestias, laudantium ut iusto illo, vero deserunt?</p>
+    <h2>Ordenamento do Território em Portugal</h2>
+    <h3>Os instrumentos de gestão</h3>
+    <h4>Os instrumentos de planeamento</h4>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, laudantium tempore totam vero iste sed error est ratione nesciunt, architecto dicta omnis reiciendis praesentium nihil voluptates. Fugit, reiciendis! Voluptatibus, reiciendis.</p>
+    <h4>Os regimes territoriais</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam dignissimos quia quam ipsum atque praesentium, illo enim earum suscipit. Vitae commodi quasi ea voluptate eos esse, harum enim iste totam.</p>
 </body>
 </html>
