--- a/ex007/html5.html
+++ b/ex007/html5.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo de Sêmantica</title>
+    <title>Exemplo de Semântica</title>
     <style>
-        Body [
-        background-color: yellow; /* Cor de fundo */
-        ]
+        body {
+            background-color: #8080da ;
+        }
     </style>
 </head>
 <body>
-   <p> Eu Moro no <address>Quitaúna, Rua Macieira, 80, Osasco - SP</address>
-   </p>
+    <p>
+        Eu moro na <address>Rua dos Capixabas, 229 - Botafogo - RJ</address>
+    </p>
 </body>
 </html>
