--- a/ex008/index.html
+++ b/ex008/index.html
@@ -3,37 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formatação de Texto</title>
-    <style>
-        mark {
-            background-color: rgb(59, 14, 240);
-        }
-    </style>
+    <title>Outras formatações</title>
 </head>
 <body>
-    <H1>Principais Formatações</H1>
-    <h2>Negrito / Destaque</h2>
-    <p>Nessa Frase temos um <B>Termo em nergrito</B> usando a tag B (Não sêmantica) </p>
-    <p>Nesta Frase tenho um <strong>Termo em destaque</strong> Usando a tag STRONG (sêmantica)</p>
-    <h2>Itálico / Ênfase</h2>
-    <i>
-        <p>Nesta frase, temos um termo em italico usando a tag I</p>
-    </i>
-    <p>Nesta Frase, <em>temos um termo usando a tag </em>EM</p>
-    <h2>texto marcado</h2>
-    <p>Podemos criar também<mark>um texto marcado</mark> usando a tag MARK</p>
-    <p>E no outro paragrafo, temos <mark>outro texto marcado</mark></p>
-    <h2>Texto Grande e Pequeno</h2>
-    <p>Estamos craiando um <big>texto grande</big> e um <small>texto pequeno </small>nesse paragráfo</p>
-    <h2>Texto deletado</h2>
-    <p>Podemos marcar um <ins>texto excluido</ins> para indicar que ele deve ser lido, mas não considerado</p>
-    <h2>Texto Inserido</h2>
-    <p>Podemos maracar um texto como inserido para dar ênfase e indicar que ele foi adicionado depois</p>
-    <p>existe também o <u>sublinahdo</u> com a U (Não sêmantica)</p>
-    <h2>Texto Sobrescrito</h2>
-    <p>Para Inserir coisas do tipo x<sup>20</sup>+3</p>
-    <h2>texto Subescrito</h2>
-    <p>Para Inserir coisas do tipo H<sub>2</sub>O</p>
-    
+    <h1>Outras formatações</h1>
+    <h2>Código-fonte / Pré-formatação</h2>
+    <p>O comando <code>document.getElementById('teste')</code> é escrito em linguagem JavaScript.</p>
+    <pre>
+        <code>
+    num = int(input('Digite um número'))
+    if num % 2 == 0:
+        print(f'O número {num} é PAR')
+    else:
+        print(f'O número {num} é ÍMPAR')
+    print('Fim do programa')
+        </code>
+    </pre>
+    <h2>Citações simples</h2>
+    <p>Como diria o pai de um amigo: <q>o computador é um burro muito rápido</q></p>
+    <h2>Citações completas</h2>
+    <p>Segundo Jeff Noble, no seu livro HTML para Leigos:</p>
+    <blockquote cite="https://books.google.com.br/books?id=E8ZtDwAAQBAJ&pg=PA17&dq=HTML&hl=pt-BR&sa=X&ved=0ahUKEwjH5-PevNboAhVNIbkGHcoxCOgQ6AEIOjAC#v=onepage&q=HTML&f=false">
+        A diferença entre elementos inline e um bloco de texto é importante. Os elementos HTML neste capítulo descrevem os blocos de texto.
+    </blockquote>
+    <h2>Abreviações</h2>
+    <p>Estou estudando <abbr title="HyperText Markup Language">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr>. Estou adorando!</p>
+    <h2>Texto invertido</h2>
+    <p><bdo dir="rtl">Estou aprendendo a criar coisas em HTML.</bdo></p>
 </body>
 </html>
